--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,11 @@
     <a href="/">Bulletin Board</a>
 
     <hr>
+
+    <div><%= notice %></div>
+
+    <div><%= alert %></div>
+
     <%= yield %>
   </body>
 </html>
