--- a/app/views/boards/show.html.erb
+++ b/app/views/boards/show.html.erb
@@ -16,7 +16,7 @@
 
       <div>
         <label for="body_field">Body</label>
-        <textarea id="body_field" name="body" cols="30" rows="10"></textarea>
+        <textarea id="body_field" name="body" rows="3"></textarea>
       </div>
 
       <div>
@@ -33,6 +33,30 @@
     <h2>Active posts</h2>
 
     <% matching_posts = Post.where({ board_id: @the_board.id }).order({ expires_on: :asc })%>
+
+    <table border="1">
+      <tr>
+        <th>Title</th>
+        <th>Body</th>
+        <th>Posted on</th>
+        <th>Expires on</th>
+      </tr>
+
+      <% matching_posts.each do |a_post| %>
+        <tr>
+          <td><%= a_post.title %></td>
+          <td>%= a_post.body %></td>
+          <td>%= a_post.created_at.strftime("%b %e, %Y") %></td>
+          <td>%= a_post.expires_on.strftime("%b %e, %Y") %></td>
+        </tr>
+
+      <% end %>
+
+    </table>
+
+    <h2>Expired posts</h2>
+
+    <% matching_posts = Post.where({ board_id: @the_board.id }).order({ expires_on: :desc })%>
 
     <table border="1">
       <tr>
